--- a/plugin.xml
+++ b/plugin.xml
@@ -16,18 +16,16 @@
     <!-- ios -->
     <platform name="ios">
 
-        <js-module src="www/ios/keyboard.js" name="keyboard">
-    	    <clobbers target="window.Keyboard"/>
+         <js-module src="www/android/keyboard.js" name="keyboard">
+            <clobbers target="window.Keyboard"/>
         </js-module>
-
         <config-file target="config.xml" parent="/*">
             <feature name="Keyboard">
-                <param name="ios-package" value="CDVIonicKeyboard" onload="true"/>
+                <param name="android-package" value="io.ionic.keyboard.IonicKeyboard" onload="true"/>
             </feature>
         </config-file>
 
-        <header-file src="src/ios/CDVIonicKeyboard.h"/>
-        <source-file src="src/ios/CDVIonicKeyboard.m"/>
+        <source-file src="src/android/IonicKeyboard.java" target-dir="src/io/ionic/keyboard"/>
     </platform>
 
     <!-- android -->
